chore: Standardize Docker and IDE configurations
* Renamed Docker-related files for consistency.
* Added `.idea/jsLibraryMappings.xml` for JavaScript library setup.
* Updated `.idea/workspace.xml` with new settings and mappings.

--- a/.dockerignore
+++ b/.dockerignore
@@ -588,9 +588,9 @@ tags
 
 ### Docker
 Dockerfile
-Dockerfile.*
+Dockerfile
 compose.*.yaml
-compose.yaml
+docker-compose.yaml
 mysql_init
 LICENSE.txt
 *.md
