--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -16,7 +16,7 @@ services:
     pull_policy: build
     stop_grace_period: 10s
     build:
-      dockerfile: Dockerfile.Apache
+      dockerfile: Dockerfile
       context: .
       target: final
     develop:
