--- a/.dockerignore
+++ b/.dockerignore
@@ -567,9 +567,9 @@ LICENSE.txt
 /config/secrets
 .travis.yml
 
+composer.lock
+package-lock.json
 !/composer.json
-!/composer.lock
-!package-lock.json
 !package.json
 
 ### Installed
