fix: update workflow to use main docker build action
Removed the 'try-legacy' suffix from docker-build-n-push.yml reference.
* Ensures the main Docker build and push action is utilized.
* Enhances consistency across workflow configurations.

--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -15,7 +15,7 @@ concurrency:
 jobs:
   suitecrm-8:
     name: suitecrm-8
-    uses: ./.github/workflows/docker-build-n-push.yml@try-legacy
+    uses: ./.github/workflows/docker-build-n-push.yml
     permissions:
       contents: write
       packages: write
