chore: clean up workspace and update Dockerfile
Remove verbose comments from workspace.xml and update Dockerfile.
* Cleared unnecessary commit message comments in .idea/workspace.xml.
* Updated Dockerfile by changing libargon2-0 to libargon2-dev for enhanced cryptographic support.

--- a/.github/workflows/suitecrm-8.yaml
+++ b/.github/workflows/suitecrm-8.yaml
@@ -30,6 +30,6 @@ jobs:
       BUILD_TYPE: RELEASE
       DIR_NAME: "./"
     secrets:
-      token: ${{ secrets.GH_RELEASE_TOKEN }}
+      token: ${{ secrets.GITHUB_TOKEN }}
       docker-user: ${{ github.REPOSITORY_OWNER }}
       docker-token: ""
