--- a/.dockerignore
+++ b/.dockerignore
@@ -1,16 +1,19 @@
-### NotepadPP template
-# Notepad++ backups #
-*.bak
-
 ### Git
 .git/
-.git
 .github/
-.github
 .gitlab/
-.gitlab
 .gitattributes
 .gitignore
+*.orig
+# Created by git when using merge tools for conflicts
+*.BACKUP.*
+*.BASE.*
+*.LOCAL.*
+*.REMOTE.*
+*_BACKUP_*.txt
+*_BASE_*.txt
+*_LOCAL_*.txt
+*_REMOTE_*.txt
 
 ### SAS template
 # Binary data formats
@@ -27,6 +30,10 @@
 *.sas7butl
 *.sas7bput
 *.sas7bbak
+*.css.map
+*.sass.map
+*.scss.map
+
 
 ### Node template
 # Diagnostic reports (https://nodejs.org/api/report.html)
@@ -42,11 +49,7 @@ pids
 lib-cov
 
 # Coverage directory used by tools like istanbul
-coverage
 *.lcov
-
-# nyc test coverage
-.nyc_output
 
 # Grunt intermediate storage (https://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
@@ -55,7 +58,6 @@ coverage
 .lock-wscript
 
 # Dependency directories
-build/Release
 bower_components
 node_modules/
 jspm_packages/
@@ -63,7 +65,6 @@ web_modules/
 .npm
 
 # TypeScript cache
-*.tsbuildinfo
 # Optional REPL history
 .node_repl_history
 
@@ -231,6 +232,7 @@ $RECYCLE.BIN/
 ### Angular template
 ## Angular ##
 # compiled output
+.angular/
 dist/
 app/**/*.js
 app/**/*.js.map
@@ -240,17 +242,13 @@ bower_components/
 
 # IDEs and editors
 .idea/
-.idea
 
 # misc
 .sass-cache/
 connect.lock/
-coverage/
 libpeerconnection.log/
 npm-debug.log
 testem.log
-typings/
-.angular/
 
 # e2e
 e2e/*.js
@@ -302,9 +300,6 @@ vc_hdrs.h
 .AppleDouble
 .LSOverride
 
-# Icon must end with two \r
-Icon
-
 # Thumbnails
 ._*
 
@@ -330,23 +325,14 @@ Temporary Items
 
 ### SugarCRM template
 ## SugarCRM
-# Ignore the cache directory completely.
-# This will break the current behaviour. Which was often leading to
-# the misuse of the repository as backup replacement.
-# For development the cache directory can be safely ignored and
-# therefore it is ignored.
-/cache/*
-
-# The silent upgrade scripts aren't needed.
 /silentUpgrade*.php
 # Logs files can safely be ignored.
 # Ignore the new upload directories.
-/upload/*
-/upload_backup/
-/public/legacy/uploads/*
-!/public/legacy/uploads/index.html
-!/upload/index.html
-
+upload/*
+upload_backup/
+public/legacy/uploads/*
+!public/legacy/uploads/index.html
+!upload/index.html
 
 ### PHPUnit template
 # Covers PHPUnit
@@ -367,50 +353,16 @@ Temporary Items
 # Composer files
 *.phar
 vendor/
-/public/legacy/vendor
-/.db_credentials
 
 # Local configs
 config/autoload/*.local.php
 
-# Binary gettext files
-*.mo
-
-#Doctrine 2
-data/DoctrineORMModule/Proxy/
-data/DoctrineORMModule/cache/
-
-# Legacy ZF1
-demos/
-extras/documentation
-
-### Homebrew template
-Brewfile.lock.json
-
-### Sass template
-*.css.map
-*.sass.map
-*.scss.map
-
-
 ### Git template
 # Created by git for backups. To disable backups in Git:
 # $ git config --global mergetool.keepBackup false
-*.orig
 
-# Created by git when using merge tools for conflicts
-*.BACKUP.*
-*.BASE.*
-*.LOCAL.*
-*.REMOTE.*
-*_BACKUP_*.txt
-*_BASE_*.txt
-*_LOCAL_*.txt
-*_REMOTE_*.txt
 
 ### Linux template
-*~
-
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
@@ -425,40 +377,26 @@ Brewfile.lock.json
 
 ### Symfony template
 # Cache and logs (Symfony2)
-# Data
-data/logs/
-data/sessions/
-data/tmp/
-temp/
-/app/logs/*
-/app/spool/*
-/var/logs/*
-/var/sessions/*
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
-!var/cache/.gitkeep
-!var/logs/.gitkeep
-!var/sessions/.gitkeep
-!app/cache/.gitkeep
-!app/logs/.gitkeep
+logs/*
+!logs/.gitkeep
 
 # Managed by Composer
-/app/cache/*
-/var/cache/*
-data/cache/
 cache/
-/app/bootstrap.php.cache
-/var/bootstrap.php.cache
-/public/legacy/cache
-.eslintcache
+public/legacy/cache/
 .php-cs-fixer.cache
 .stylelintcache
 .cache
 .parcel-cache
+composer.lock
+package-lock.json
+!composer.json
+!package.json
 
 # Microbundle cache
 .rpt2_cache/
@@ -466,15 +404,8 @@ cache/
 .rts2_cache_es/
 .rts2_cache_umd/
 
-# Assets and user uploads
-/web/bundles/
-/web/uploads/
-
 # Backup entities generated with doctrine:generate:entities command
 **/Entity/*~
-
-# Embedded web-server pid file
-/.web-server-pid
 
 # projectiles files
 .projectile
@@ -488,6 +419,8 @@ cache/
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 ### VisualStudioCode template
+# Local History for Visual Studio Code
+.history/
 .vscode/*
 .vscode-test
 !.vscode/settings.json
@@ -495,9 +428,6 @@ cache/
 !.vscode/launch.json
 !.vscode/extensions.json
 !.vscode/*.code-snippets
-
-# Local History for Visual Studio Code
-.history/
 
 # Built Visual Studio Code Extensions
 *.vsix
@@ -537,7 +467,6 @@ tags
 # https://yarnpkg.com/getting-started/qa#which-files-should-be-gitignored
 # yarn v2
 .yarn/*
-.yarn-integrity
 !.yarn/releases
 !.yarn/patches
 !.yarn/plugins
@@ -556,21 +485,14 @@ tags
 Dockerfile
 Dockerfile.*
 docker-compose.yaml
-docker-*.yaml
-/mysql_init
+mysql_init/
 LICENSE.txt
 *.md
 .editorconfig
-/.db_credentials.env
-/.dockerignore
-/files.md5
-/config/secrets
+.db_credentials.env
+.dockerignore
+files.md5
 .travis.yml
-
-composer.lock
-package-lock.json
-!/composer.json
-!package.json
 
 ### Installed
 .curl_check_main_page
@@ -581,11 +503,11 @@ public/legacy/config_override.php
 public/legacy/config_si.php
 public/legacy/custom/modules/logic_hooks.php
 public/legacy/install/status.json
-/public/dist
-/public/bundles
-/public/extensions
+public/dist
+public/bundles
+public/extensions
 
 # Bin!
-/bin/*
+bin/*
 !bin/console
 !bin/symfony_requirements
