--- a/package.json
+++ b/package.json
@@ -34,16 +34,16 @@
   ],
   "dependencies": {
     "@angular-architects/module-federation": "~16.0.4",
-    "@angular/animations": "~16.1.9",
-    "@angular/cdk": "^16.2.14",
-    "@angular/common": "~16.1.9",
-    "@angular/compiler": "~16.1.9",
-    "@angular/core": "~16.1.9",
-    "@angular/forms": "~16.1.9",
-    "@angular/localize": "~16.1.9",
-    "@angular/platform-browser": "~16.1.9",
-    "@angular/platform-browser-dynamic": "~16.1.9",
-    "@angular/router": "~16.1.9",
+    "@angular/animations": "~16.2.12",
+    "@angular/cdk": "^16.2.13",
+    "@angular/common": "~16.2.12",
+    "@angular/compiler": "~16.2.12",
+    "@angular/core": "~16.2.12",
+    "@angular/forms": "~16.2.12",
+    "@angular/localize": "~16.2.12",
+    "@angular/platform-browser": "~16.2.12",
+    "@angular/platform-browser-dynamic": "~16.2.12",
+    "@angular/router": "~16.2.12",
     "@apollo/client": "^3.11.8",
     "@ng-bootstrap/ng-bootstrap": "15.0.1",
     "@nrwl/workspace": "^16.10.0",
@@ -53,7 +53,7 @@
     "@types/object-hash": "^3.0.6",
     "ajv": "~8.17.1",
     "angular-svg-icon": "^16.1.0",
-    "apollo-angular": "^7.2.1",
+    "apollo-angular": "^5.0.2",
     "bootstrap": "^5.3.3",
     "bootstrap-css-only": "^4.4.1",
     "concurrently": "^8.2.2",
@@ -64,25 +64,25 @@
     "mathjs": "^11.12.0",
     "ng-animate": "^2.0.1",
     "ng-dynamic-component": "^10.7.0",
-    "ngx-build-plus": "^18.0.0",
+    "ngx-build-plus": "^16.0.0-next.7",
     "ngx-chips": "^3.0.0",
     "nyc": "~15.1.0",
     "object-hash": "^3.0.0",
     "primeng": "^16.9.1",
-    "rxjs": "^7.8.1",
+    "rxjs": "^7.4.0",
     "serve": "^14.2.4",
     "tinymce": "^7.4.1",
-    "tslib": "^2.8.0",
-    "webpack": "^5.95.0",
+    "tslib": "^2.3.0",
+    "webpack": "^5.84.1",
     "yarn": "^1.22.22",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.13.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.2.16",
-    "@angular-eslint/builder": "^16.3.2-alpha.0",
+    "@angular-eslint/builder": "^12.7.0",
     "@angular/cli": "^16.2.16",
-    "@angular/compiler-cli": "16.1.9",
-    "@angular/language-service": "16.1.9",
+    "@angular/compiler-cli": "^16.2.12",
+    "@angular/language-service": "^16.2.12",
     "@types/jasmine": "~3.6.11",
     "@types/jasminewd2": "^2.0.13",
     "@types/lodash-es": "^4.17.12",
@@ -91,7 +91,7 @@
     "@typescript-eslint/eslint-plugin": "^2.34.1-alpha.2",
     "@typescript-eslint/parser": "^2.34.1-alpha.2",
     "barrelsby": "^2.8.1",
-    "eslint": "^9.13.0",
+    "eslint": "^6.8.0",
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-import-resolver-typescript": "^2.7.1",
     "eslint-plugin-compat": "^6.0.1",
