--- a/composer.json
+++ b/composer.json
@@ -45,6 +45,7 @@
     "ext-exif": "*",
     "ext-mbstring": "*",
     "ext-simplexml": "*",
+    "ext-zend-opcache": "*",
     "api-platform/core": "^3.4",
     "composer/package-versions-deprecated": "1.11.99.3",
     "doctrine/doctrine-bundle": "^2.13",
@@ -120,7 +121,7 @@
     "wikimedia/composer-merge-plugin": "^2.1",
     "zbateson/mail-mime-parser": "^2.4",
     "slim/http": "^1.4.0",
-    "slim/slim": "3.*"
+    "slim/slim": "^3.7"
   },
   "require-dev": {
     "api-platform/schema-generator": "^5.2",
@@ -145,7 +146,7 @@
     "symfony/browser-kit": "6.4.*",
     "symfony/css-selector": "6.4.*",
     "symfony/debug-bundle": "6.4.*",
-    "symfony/phpunit-bridge": "^7.1",
+    "symfony/phpunit-bridge": "6.4.*",
     "symfony/maker-bundle": "^1.61",
     "symfony/stopwatch": "6.4.*",
     "symfony/web-profiler-bundle": "6.4.*"
