refactor: Add return type hints to display() methods

--- a/.github/workflows/suitecrm-8.yaml
+++ b/.github/workflows/suitecrm-8.yaml
@@ -9,6 +9,12 @@ on:
       - docker-compose.yaml
       - composer.json
       - package.json
+      - angular.json
+      - config/**
+      - core/**
+      - extensions/**
+      - public/**
+      - src/**
   release:
     types:
       - created
